// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmartFetch no DOM catches empty responses as an empty string 1`] = `
Ok {
  "type": "Ok",
  "value": "",
}
`;

exports[`SmartFetch no DOM still returns okay values without breaking 1`] = `
Ok {
  "type": "Ok",
  "value": Object {
    "data": "here",
  },
}
`;
